objects/tffa__ProductProductXref__c.object
<CustomObject>
    <description>Captures parent-child relationship between financial products which may represent a product bundle or set of complimentary products sold together. 
In product bundle use case, it captures relationship between  a financial product and a product bundle. Additionaly captures nature of the product in the bundle.</description>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>A summarized description, meant to provide a quick overview about the product.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls whether the related product is available</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete</description>
        <label>Is deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the product selection is mandatory and cannot be removed while applying</description>
        <label>Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates primary related product of the bundle</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Product__c</fullName>
        <description>Reference to the parent financial product</description>
        <label>Financial Product</label>
        <referenceTo>tffa__Product__c</referenceTo>
        <relationshipLabel>Related Products</relationshipLabel>
        <relationshipName>ProductXrefs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__RelatedProductCode__c</fullName>
        <description>Unique product code of the related product maintained in the system</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Related product code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__RelatedProduct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Related Product in the relationship</description>
        <label>Related Product</label>
        <referenceTo>tffa__Product__c</referenceTo>
        <relationshipLabel>Related Product</relationshipLabel>
        <relationshipName>RelatedProductXrefs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Controls the relative order of the item in a list</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Product Relationship</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Relation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>